# kazeta-plus-plus

./: .gitignore  AGENTS.md  ARCHITECTURE_OVERLAY.md  BUILD.md  Dockerfile  Dockerfile.dev  RA_IMPLEMENTATION_VERIFICATION.md  README.md  build-all.sh  build-image.sh  cartridge.toml  check-display-packages.sh  create-upgrade-kit.sh  detect-display-server.sh  dev-run.sh  docker-entrypoint.sh  gba-1.0.kzr  manifest  ps2-1.0.kzr  run-bios-docker.sh  test-multiplayer.sh  update-kazeta-plus.sh  upgrade-to-plus.sh
.cargo/: config.toml
.github/workflows/: build-iso.yml
bios/: Cargo.toml
bios/src/: audio.rs  cd_player_backend.rs  config.rs  input.rs  main.rs  save.rs  theme.rs  types.rs  utils.rs
bios/src/ui/: blades.rs  bluetooth.rs  data.rs  dialog.rs  extras_menu.rs  main_menu.rs  mod.rs  retroachievements.rs  settings.rs  theme_downloader.rs
claude_plan/: NEW_FEATURES.md  PERFORMANCE_ISSUES.md  REVIEW_FINDINGS.md  future_enhancements.md  overlay_system.md  retroachievements_integration.md  save_states.md  xbox_blades_dashboard.md
input-daemon/: Cargo.toml
input-daemon/src/: main.rs
overlay/: Cargo.toml  TESTING.md  test_controller_input.sh
overlay/src/: client.rs  controllers.rs  hotkeys.rs  input.rs  ipc.rs  lib.rs  main.rs  menu_config.rs  performance.rs  playtime.rs  rendering.rs  state.rs  theme_config.rs  themes.rs  utils.rs
ra/: Cargo.toml
ra/src/: api.rs  auth.rs  cache.rs  game_names.rs  hash.rs  lib.rs  main.rs  types.rs
rootfs/etc/: makepkg.conf
rootfs/etc/lightdm/lightdm.conf.d/: 10-kazeta-session.conf
rootfs/etc/pacman.d/: mirrorlist
rootfs/etc/systemd/system/: kazeta-input.service  kazeta-overlay.service  kazeta-profile-loader.service
rootfs/usr/share/kazeta/: picom.conf
scripts/: apply-crash-hardening.sh  device-build-and-deploy.sh  generate_kzi.py
