[package]
name = "kazeta-input"
version = "0.1.0"
edition = "2021"
description = "Global input daemon for Kazeta+ overlay hotkeys"

[[bin]]
name = "kazeta-input"
path = "src/main.rs"

[dependencies]
# Linux input handling
evdev = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# File watching for device hotplug
notify = "6.1"
inotify = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Signal handling
ctrlc = "3.4"

