[package]
name = "kazeta-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kazeta-overlay"
path = "src/main.rs"
required-features = ["daemon"]

[lib]
name = "kazeta_overlay"
path = "src/lib.rs"

[features]
default = []
daemon = ["macroquad", "cocoa", "objc", "gilrs", "sysinfo", "dirs", "kazeta-ra"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Optional dependencies for daemon
macroquad = { version = "0.4", optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
gilrs = { version = "0.11.0", optional = true }  # Same gamepad library as BIOS
sysinfo = { version = "0.32", optional = true }  # System performance monitoring
kazeta-ra = { path = "../ra", optional = true }

# Linux-specific dependencies for daemon
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", optional = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }

# macOS-specific dependencies for daemon
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.25", optional = true }
objc = { version = "0.2", optional = true }
